@@ -20,12 +20,14 @@ import org.springframework.http.ResponseEntity;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -47,39 +49,39 @@ class EventControllerTest {
     private GetEventByIdPort getEventByIdPort;
 
     @InjectMocks
-    private EventController controller;
+    private EventController eventController;
 
-    private UUID eventId;
     private UUID organizerId;
+    private UUID eventId;
     private EventRequest eventRequest;
-    private EventUpdateRequest updateRequest;
+    private EventUpdateRequest eventUpdateRequest;
     private EventResponse eventResponse;
-    private EventFeedResponse feedResponse;
+    private EventFeedResponse eventFeedResponse;
 
     @BeforeEach
     void setUp() {
-        eventId = UUID.randomUUID();
         organizerId = UUID.randomUUID();
+        eventId = UUID.randomUUID();
 
         eventRequest = EventRequest.builder()
-                .name("Test Event")
-                .description("Description")
-                .dateTime(LocalDate.now().plusDays(1))
+                .name("Tech Talk 2025")
+                .description("A great tech event")
+                .dateTime(LocalDate.now().plusDays(10))
                 .startTime("10:00")
                 .duration(60)
-                .location("Test Location")
+                .location("Auditorium A")
                 .category(EventCategory.ACADEMIC)
-                .type(EventType.OPEN)
+                .type(EventType.WITH_CAPACITY)
                 .maxCapacity(100)
                 .build();
 
-        updateRequest = EventUpdateRequest.builder()
-                .name("Updated Event")
-                .description("Updated Description")
-                .dateTime(LocalDate.now().plusDays(2))
+        eventUpdateRequest = EventUpdateRequest.builder()
+                .name("Tech Talk Updated")
+                .description("Updated description")
+                .dateTime(LocalDate.now().plusDays(15))
                 .startTime("11:00")
                 .duration(90)
-                .location("Updated Location")
+                .location("Auditorium B")
                 .category(EventCategory.CULTURAL)
                 .type(EventType.WITH_CAPACITY)
                 .maxCapacity(200)
@@ -87,153 +89,160 @@ class EventControllerTest {
 
         eventResponse = EventResponse.builder()
                 .id(eventId)
-                .name("Test Event")
-                .dateTime(LocalDate.now().plusDays(1))
+                .name("Tech Talk 2025")
+                .dateTime(LocalDate.now().plusDays(10))
                 .startTime(LocalTime.of(10, 0))
                 .duration(60)
-                .location("Test Location")
+                .location("Auditorium A")
                 .category(EventCategory.ACADEMIC)
-                .type(EventType.OPEN)
+                .type(EventType.WITH_CAPACITY)
                 .status(EventStatus.ACTIVE)
-                .qrCode("qr123")
+                .qrCode("qr-code-data")
                 .build();
 
-        feedResponse = EventFeedResponse.builder()
+        eventFeedResponse = EventFeedResponse.builder()
                 .id(eventId)
-                .name("Test Event")
-                .description("Description")
-                .dateTime(LocalDate.now().plusDays(1))
+                .name("Tech Talk 2025")
+                .dateTime(LocalDate.now().plusDays(10))
                 .startTime(LocalTime.of(10, 0))
                 .durationMinutes(60)
-                .location("Test Location")
+                .location("Auditorium A")
                 .category(EventCategory.ACADEMIC)
-                .type(EventType.OPEN)
+                .type(EventType.WITH_CAPACITY)
                 .availableCapacity(100)
                 .status(EventStatus.ACTIVE)
-                .qrCode("qr123")
                 .build();
     }
 
     @Test
-    void createShouldReturnCreatedStatusWithEventResponse() {
-        when(createEventPort.execute(eventRequest, organizerId)).thenReturn(eventResponse);
+    void create_debeRetornar201YEventResponse() {
+        when(createEventPort.execute(any(EventRequest.class), eq(organizerId)))
+                .thenReturn(eventResponse);
 
-        ResponseEntity<EventResponse> response = controller.create(eventRequest, organizerId);
+        ResponseEntity<EventResponse> response = eventController.create(eventRequest, organizerId.toString());
 
         assertEquals(HttpStatus.CREATED, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertEquals(eventResponse, response.getBody());
-        verify(createEventPort).execute(eventRequest, organizerId);
+        assertEquals(eventResponse.getId(), response.getBody().getId());
+        assertEquals(eventResponse.getName(), response.getBody().getName());
+        verify(createEventPort).execute(any(EventRequest.class), eq(organizerId));
     }
 
     @Test
-    void getAllShouldReturnListOfEventsWhenNotEmpty() {
+    void create_debeInvocarCreateEventPortConOrganizadorCorrecto() {
+        when(createEventPort.execute(any(EventRequest.class), eq(organizerId)))
+                .thenReturn(eventResponse);
+
+        eventController.create(eventRequest, organizerId.toString());
+
+        verify(createEventPort, times(1)).execute(eventRequest, organizerId);
+    }
+
+    @Test
+    void getAll_conEventosDisponibles_debeRetornar200YListaDeEventos() {
         EventFeedRequest filters = EventFeedRequest.builder()
                 .category(EventCategory.ACADEMIC)
-                .date(LocalDate.now())
+                .date(LocalDate.now().plusDays(1))
                 .build();
 
-        List<EventFeedResponse> events = List.of(feedResponse);
+        when(getEventsPort.execute(EventCategory.ACADEMIC, filters.getDate()))
+                .thenReturn(List.of(eventFeedResponse));
 
-        when(getEventsPort.execute(filters.getCategory(), filters.getDate())).thenReturn(events);
-
-        ResponseEntity<?> response = controller.getAll(filters);
+        ResponseEntity<?> response = eventController.getAll(filters);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertTrue(response.getBody() instanceof List);
-        @SuppressWarnings("rawtypes")
-        List body = (List) response.getBody();
+        assertInstanceOf(List.class, response.getBody());
+        List<?> body = (List<?>) response.getBody();
         assertEquals(1, body.size());
-        verify(getEventsPort).execute(filters.getCategory(), filters.getDate());
     }
 
     @Test
-    void getAllShouldReturnMessageWhenEmpty() {
+    void getAll_sinEventos_debeRetornarMensaje() {
         EventFeedRequest filters = EventFeedRequest.builder().build();
 
-        when(getEventsPort.execute(filters.getCategory(), filters.getDate())).thenReturn(List.of());
+        when(getEventsPort.execute(null, null))
+                .thenReturn(Collections.emptyList());
 
-        ResponseEntity<?> response = controller.getAll(filters);
+        ResponseEntity<?> response = eventController.getAll(filters);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertTrue(response.getBody() instanceof Map);
-        @SuppressWarnings("unchecked")
-        Map<String, String> body = (Map<String, String>) response.getBody();
+        assertInstanceOf(Map.class, response.getBody());
+        Map<?, ?> body = (Map<?, ?>) response.getBody();
         assertEquals("No events available at this time", body.get("message"));
-        verify(getEventsPort).execute(filters.getCategory(), filters.getDate());
     }
 
     @Test
-    void getAllWithNullFiltersShouldWork() {
-        EventFeedRequest filters = EventFeedRequest.builder()
-                .category(null)
-                .date(null)
-                .build();
+    void getAll_sinFiltros_debeInvocarGetEventsPortConNulos() {
+        EventFeedRequest filters = EventFeedRequest.builder().build();
 
-        when(getEventsPort.execute(null, null)).thenReturn(List.of(feedResponse));
+        when(getEventsPort.execute(null, null)).thenReturn(Collections.emptyList());
 
-        ResponseEntity<?> response = controller.getAll(filters);
+        eventController.getAll(filters);
 
-        assertEquals(HttpStatus.OK, response.getStatusCode());
         verify(getEventsPort).execute(null, null);
     }
 
     @Test
-    void updateShouldReturnOkWithUpdatedEvent() {
-        when(updateEventPort.execute(eventId, updateRequest, organizerId)).thenReturn(eventResponse);
+    void update_debeRetornar200YEventoActualizado() {
+        when(updateEventPort.execute(eq(eventId), any(EventUpdateRequest.class), eq(organizerId)))
+                .thenReturn(eventResponse);
 
-        ResponseEntity<EventResponse> response = controller.update(eventId, updateRequest, organizerId);
+        ResponseEntity<EventResponse> response = eventController.update(eventId, eventUpdateRequest, organizerId.toString());
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertEquals(eventResponse, response.getBody());
-        verify(updateEventPort).execute(eventId, updateRequest, organizerId);
+        assertEquals(eventResponse.getId(), response.getBody().getId());
+        verify(updateEventPort).execute(eq(eventId), any(EventUpdateRequest.class), eq(organizerId));
     }
 
     @Test
-    void getByIdShouldReturnEventFeedResponse() {
-        when(getEventByIdPort.execute(eventId)).thenReturn(feedResponse);
+    void update_debeInvocarUpdateEventPortConParametrosCorrectos() {
+        when(updateEventPort.execute(eq(eventId), eq(eventUpdateRequest), eq(organizerId)))
+                .thenReturn(eventResponse);
 
-        ResponseEntity<EventFeedResponse> response = controller.getById(eventId);
+        eventController.update(eventId, eventUpdateRequest, organizerId.toString());
+
+        verify(updateEventPort, times(1)).execute(eventId, eventUpdateRequest, organizerId);
+    }
+
+    @Test
+    void getById_debeRetornar200YEventoEncontrado() {
+        when(getEventByIdPort.execute(eventId)).thenReturn(eventFeedResponse);
+
+        ResponseEntity<EventFeedResponse> response = eventController.getById(eventId);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertEquals(feedResponse, response.getBody());
+        assertEquals(eventFeedResponse.getId(), response.getBody().getId());
         verify(getEventByIdPort).execute(eventId);
     }
 
     @Test
-    void cancelShouldReturnNoContent() {
-        doNothing().when(cancelEventPort).execute(eventId, organizerId);
+    void getById_debeInvocarGetEventByIdPortConIdCorrecto() {
+        when(getEventByIdPort.execute(eventId)).thenReturn(eventFeedResponse);
 
-        ResponseEntity<Void> response = controller.cancel(eventId, organizerId);
+        eventController.getById(eventId);
 
-        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
-        assertNull(response.getBody());
-        verify(cancelEventPort).execute(eventId, organizerId);
+        verify(getEventByIdPort, times(1)).execute(eventId);
     }
 
     @Test
-    void createShouldHandleEventWithNullMaxCapacity() {
-        EventRequest requestWithoutCapacity = EventRequest.builder()
-                .name("No Capacity Event")
-                .description("Description")
-                .dateTime(LocalDate.now().plusDays(1))
-                .startTime("10:00")
-                .duration(60)
-                .location("Location")
-                .category(EventCategory.SPORTS)
-                .type(EventType.OPEN)
-                .maxCapacity(null)
-                .build();
+    void cancel_debeRetornar204SinContenido() {
+        doNothing().when(cancelEventPort).execute(eq(eventId), eq(organizerId));
 
-        when(createEventPort.execute(requestWithoutCapacity, organizerId)).thenReturn(eventResponse);
+        ResponseEntity<Void> response = eventController.cancel(eventId, organizerId.toString());
 
-        ResponseEntity<EventResponse> response = controller.create(requestWithoutCapacity, organizerId);
+        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
+        assertNull(response.getBody());
+        verify(cancelEventPort).execute(eq(eventId), eq(organizerId));
+    }
 
-        assertEquals(HttpStatus.CREATED, response.getStatusCode());
-        verify(createEventPort).execute(requestWithoutCapacity, organizerId);
+    @Test
+    void cancel_debeInvocarCancelEventPortConParametrosCorrectos() {
+        doNothing().when(cancelEventPort).execute(eq(eventId), eq(organizerId));
+
+        eventController.cancel(eventId, organizerId.toString());
+
+        verify(cancelEventPort, times(1)).execute(eventId, organizerId);
     }
 }
